--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -19,7 +19,7 @@ spring.redis.timeout=0
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 ## Mybatis 配置
 mybatis.typeAliasesPackage=com.example.domain
